--- a/app/views/objectives/stage3.html.erb
+++ b/app/views/objectives/stage3.html.erb
@@ -31,7 +31,7 @@
           <div role="tabpanel" class="tab-pane active" id="data">
             <div class="bg_grey">
                 <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_explanation') %>"><i class="fa fa-info"></i></button>
-              <a href="/sandboxes/new" target="_blank" class="btn btn-warning pull-right"><i class="fa fa-sitemap"></i> <%= t('.draw_sandbox_button') %></a>
+              <a href="//www.draw.io/" target="_blank" class="btn btn-warning pull-right"><i class="fa fa-sitemap"></i> <%= t('.draw_sandbox_button') %></a>
               <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
             </div>
             <div class="bg_grey">
