--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -38,7 +38,7 @@
                     <!-- real problem -->
                     <tr title="Complete Step">
                       <td class="text-center td-w-10p">
-                        <i class="<%= icon_class @real_problem %>"></i>
+                        <i class="<%= icon_class @real_problem %>" data-step="3" data-intro="<%= t('.step_three') %>"></i>
                       </td>
                       <td>
                         <%= link_to link_text(:real_problem), stage1_project_path, target: "_self"  %>
