--- a/app/views/projects/_dashboard.html.erb
+++ b/app/views/projects/_dashboard.html.erb
@@ -48,34 +48,36 @@
       <div class="ct-chart ct-perfect-fourth"></div>
 
       <script>
-        var chart = new Chartist.Line('.ct-chart', {
-          labels: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun','Jul', 'Ago', 'Sept', 'Oct', 'Nov', 'Dic'],
-          series: [
-            [1, 5, 2, 5, 4, 3, 1, 5, 2, 5, 4, 3],
-            [2, 3, 4, 8, 1, 2, 2, 3, 4, 8, 1, 2],
-            [5, 4, 3, 2, 1, 2, 5, 4, 3, 2, 1, 1]
-          ]
-        }, {
-          low: 0,
-          showArea: true,
-          showPoint: true,
-          height: '300px',
-          fullWidth: true
-        });
+        function draw_graph() {
+          var chart = new Chartist.Line('.ct-chart', {
+            labels: ['Ene', 'Feb', 'Mar', 'Abr', 'May', 'Jun','Jul', 'Ago', 'Sept', 'Oct', 'Nov', 'Dic'],
+            series: [
+              [1, 5, 2, 5, 4, 3, 1, 5, 2, 5, 4, 3],
+              [2, 3, 4, 8, 1, 2, 2, 3, 4, 8, 1, 2],
+              [5, 4, 3, 2, 1, 2, 5, 4, 3, 2, 1, 1]
+            ]
+          }, {
+            low: 0,
+            showArea: true,
+            showPoint: true,
+            height: '300px',
+            fullWidth: true
+          });
 
-        chart.on('draw', function(data) {
-          if(data.type === 'line' || data.type === 'area') {
-            data.element.animate({
-              d: {
-                begin: 2000 * data.index,
-                dur: 2000,
-                from: data.path.clone().scale(1, 0).translate(0, data.chartRect.height()).stringify(),
-                to: data.path.clone().stringify(),
-                easing: Chartist.Svg.Easing.easeOutQuint
-              }
-            });
-          }
-        });
+          chart.on('draw', function(data) {
+            if(data.type === 'line' || data.type === 'area') {
+              data.element.animate({
+                d: {
+                  begin: 2000 * data.index,
+                  dur: 2000,
+                  from: data.path.clone().scale(1, 0).translate(0, data.chartRect.height()).stringify(),
+                  to: data.path.clone().stringify(),
+                  easing: Chartist.Svg.Easing.easeOutQuint
+                }
+              });
+            }
+          });
+        }
       </script>
 
     </div>
