--- a/app/views/projects/_dashboard.html.erb
+++ b/app/views/projects/_dashboard.html.erb
@@ -86,29 +86,19 @@
 <div class="row">
   <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
     <div class="well">
-      <h3>Próximas actividades</h3>
-      <p><a href="#">Ver todas las actividades</a></p>
+      <h3>Upcoming activities</h3>
+      <p><a href="#">See all activities</a></p>
       <table class="table">
+        <% @upcoming_activities.first(10).each do |ac| %>
         <tr>
-          <th>Fecha</th>
-          <th>Actividad</th>
+          <th>Date</th>
+          <th>Activity</th>
         </tr>
         <tr>
-          <td>12/12/2020</td>
-          <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dolor enim. Donec porttitor mauris</td>
+          <td><%= ac.scheduling %></td>
+          <td><%= ac.title %></td>
         </tr>
-        <tr>
-          <td>12/12/2020</td>
-          <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dolor enim. Donec porttitor mauris</td>
-        </tr>
-        <tr>
-          <td>12/12/2020</td>
-          <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dolor enim. Donec porttitor mauris</td>
-        </tr>
-        <tr>
-          <td>12/12/2020</td>
-          <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec dolor enim. Donec porttitor mauris</td>
-        </tr>
+        <% end %>
       </table>
     </div>
   </div>
