add print button in overview

--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -186,6 +186,7 @@
           <% end %>
           <!-- end objectives -->
 
+      <button class="btn btn-info" onclick="window.print()">Print overview <i class="fa fa-print"></i></button>
     </div>
   </div>
 </div>
