remove actor type from interim outcomes

--- a/app/views/objectives/_outcome_modal.html.erb
+++ b/app/views/objectives/_outcome_modal.html.erb
@@ -14,12 +14,12 @@
           <option ng-repeat="ca in outcomes_categories">{{ ca }}</option>
         </select>
       </div>
-      <div class="form-group">
+      <!--<div class="form-group">
         <label for="actor_type"><%= t('.actor_type') %></label>
         <select name="actor_type" ng-model="current_outcome.actor_type_id">
           <option ng-repeat="at in actor_types">{{ at }}</option>
         </select>
-      </div>
+      </div>-->
     </form>
   </div>
   <div class="modal-footer">
