--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -138,7 +138,7 @@
                       <span class='blue'>Outcome <%= i+1 %>. </span><b><%= outcome.description.presence || t('.empty') %></b>
                     <ul style="list-style-type:disc">
                       <li>Outcome type: <%= outcome.outcome_type_id %></li>
-                      <li>Actor type: <%= outcome.actor_type_id %></li>
+                      <!-- <li>Actor type: <%= outcome.actor_type_id %></li> -->
                     </ul>
                   <% end %>
                 <% end %>
