--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -17,7 +17,7 @@
           <div class="panel-heading"  st-safe-src="resources" st-table="resource_list">
             <input st-search placeholder="Global search" class="input-sm form-control" type="search"/>
           </div>
-              <table class="table table-striped table-bordered" st-safe-src="resources" st-table="resource_list">
+              <table class="table table-striped table-bordered document" st-safe-src="resources" st-table="resource_list">
                 <thead>
                   <tr>
                     <th>Id</th>
