--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -182,6 +182,10 @@
 
     </div>
     <div role="tabpanel" class="tab-pane" id="dashboard">
+      <div class="project-hero">
+        <h2><%= @project.title %></h2>
+        <p><%= @project.description %></p>
+      </div>
       <%= render "dashboard" %>
     </div>
     <div role="tabpanel" class="tab-pane" id="documents">
