--- a/app/views/projects/_dashboard.html.erb
+++ b/app/views/projects/_dashboard.html.erb
@@ -123,7 +123,8 @@
         </div>
       </div>
     </div>
-    <hr>
+  </div>
+  <div class="box">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <h2>Interim Outcomes</h2>
@@ -167,7 +168,8 @@
         </div>
       </div>
     </div>
-    <hr>
+  </div>
+  <div class="box">
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <h2>Objetives</h2>
