--- a/app/views/projects/_dashboard.html.erb
+++ b/app/views/projects/_dashboard.html.erb
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
         <div class="well">
-          <h3>Estado actividades últimos meses</h3>
+          <h3>State of activities last months</h3>
           <div class="ct-chart ct-perfect-fourth"></div>
 
           <script>
@@ -143,7 +143,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <div class="well text-center">
-          <h3>Porcentaje Interim Outcomes logrados</h3>
+          <h3>Percentage interim outcomes achieved</h3>
           <div class="c100 p30 big">
               <span>30%</span>
               <div class="slice">
@@ -156,7 +156,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <div class="well text-center">
-          <h3>Porcentaje asignación de actividades predefinidas</h3>
+          <h3>Percentage allocation of predefined activities</h3>
           <div class="c100 p90 big">
               <span>90%</span>
               <div class="slice">
@@ -187,7 +187,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <div class="well text-center">
-          <h3>Porcentaje avance objetivos priorizados</h3>
+          <h3>Percentage advance priority objectives</h3>
           <div class="c100 p40 big">
               <span>40%</span>
               <div class="slice">
@@ -200,7 +200,7 @@
       </div>
       <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
         <div class="well text-center">
-          <h3>Porcentaje avance total de objetivos</h3>
+          <h3>Percentage of total advance objectives</h3>
           <div class="c100 p50 big">
               <span>50%</span>
               <div class="slice">
