--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -40,6 +40,7 @@
                 <tr>
                   <th><%= t('.actor') %></th>
                   <th><%= t('.ask') %></th>
+                  <th><%= t('.execution') %></th>
                   <th class="text-right"><%= t('.actions') %></th>
                 </tr>
               </thead>
@@ -47,6 +48,7 @@
                 <tr ng-repeat="ask in asks">
                   <td>{{ ask.actor_name }}</td>
                   <td>{{ ask.description }}</td>
+                  <td><i class="fa fa-check" ng-if="ask.execution"></i></td>
                   <td class="text-right"><a href="#" title="Edit" ng-click="add_edit_ask(ask)"><i class="fa fa-pencil-square-o"></i></a> <a href="#" title="Delete" ng-click="delete_ask(ask)"><i class="fa fa-trash"></i></a></td>
                 </tr>
               </tbody>
