--- a/app/views/resources/aside.html.erb
+++ b/app/views/resources/aside.html.erb
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    
+  <h3 class="modal-title"><%= t('.resource') %></h3>
 </div>
 <div class="modal-body">
     <%= simple_form_for [@project, @resource], remote: true do |f| %>
