--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -27,6 +27,7 @@
             <h2><%= @project.title %></h2>
             <p><%= @project.description %></p>
           </div>
+          <h3 class="mb50">Stage 1: Identify the policy objectives to pursue</h3>
           <div class="panel panel-default">
             <div class="panel-heading">
               <h4 class="panel-title" title="Complete Stage"><i class="<%= icon_class_stage 1 %>"></i> <%= t('.stage1_title') %></h4>
@@ -89,6 +90,7 @@
         </div>
       </div>
       <hr>
+      <h3 class="mb50">Stage 2: Plan for each of your prioritized Policy Objetives in detail</h3>
       <div class="panel panel-default">
         <div class="panel-heading">
           <h4 class="panel-title"><i class="<%= icon_class_stage 3 %>"></i> <%= t('.stage3_title') %></h4>
