display support and influence in overview

--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -118,8 +118,8 @@
                     <p><%= actor.description.presence || t('.empty') %></p>
                     <ul style="list-style-type:disc">
                       <li><b>Actor type: </b><%= actor.actor_type.presence || t('.empty') %></li>
-                      <li><b>Support: </b><%= actor.support.presence || t('.empty') %></li>
-                      <li><b>Influence: </b><%= actor.influence.presence || t('.empty') %></li>
+                      <li><b>Support: </b><%= get_support actor.support.presence || t('.empty') %></li>
+                      <li><b>Influence: </b><%= get_influence actor.influence.presence || t('.empty') %></li>
                     </ul>
                   <% end %>
                 <% end %>
