cambio de amarillo para neutral

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -515,7 +515,7 @@ div#resources_paginate {
   color: #3c763d;
 }
 .neutral {
-  color: #8a6d3b;
+  color: #EAB751;
 }
 .failed {
   color: #a94442;
@@ -690,18 +690,18 @@ table.document td .btn {
 }
 .ct-perfect-fourth .ct-series-b .ct-line {
   /* Set the colour of this series line */
-  stroke: yellow;
+  stroke: #EAB751;
   /* Control the thikness of your lines */
   stroke-width: 3px;
 }
 .ct-perfect-fourth .ct-series-b .ct-point {
   /* Colour of your points */
-  stroke: yellow;
+  stroke: #EAB751;
   /* Size of your points */
   stroke-width: 10px;
 }
 .ct-perfect-fourth .ct-series-b .ct-area {
-    fill: yellow;
+    fill: #EAB751;
 }
 .ct-perfect-fourth .ct-series-c .ct-line {
   /* Set the colour of this series line */
