--- a/app/views/objectives/stage5.html.erb
+++ b/app/views/objectives/stage5.html.erb
@@ -43,6 +43,7 @@
                     <th><%= t('.description') %></th>
                     <th><%= t('.outcomes') %></th>
                     <th><%= t('.date') %></th>
+                    <th><%= t('.progress') %></th>
                     <th class="text-center"><%= t('.completion') %></th>
                     <th class="text-right"><%= t('.actions') %></th>
                   </tr>
@@ -57,6 +58,7 @@
                       </ul>
                     </td>
                     <td>{{activity.scheduling | date: 'mediumDate' }}</td>
+                    <td class="text-center">{{ activity.percentage }}%</td>
                     <td class="text-center">
                       <i class="fa fa-check" ng-if="activity.completion"></i>
                     </td>
