--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,10 +40,10 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="<%= root_path %>" target="_self">Home</a></li>
-            <li><a href="<%= projects_path %>" target="_self">Projects</a></li>
-            <li><a href="#">Documents</a></li>
-            <li><a href="#">Tools</a></li>
+            <li><a href="<%= root_path %>" target="_self">Home</a></li>
+            <li class="active"><a href="<%= projects_path %>" target="_self">Projects</a></li>
+            <!-- <li><a href="#">Documents</a></li>
+            <li><a href="#">Tools</a></li> -->
           </ul>
           <ul class="nav navbar-right top-nav">
             <li class="dropdown">
