--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -31,8 +31,8 @@
           <ul class="nav navbar-nav">
             <li class="active"><a href="<%= root_path %>" target="_self"><%= t('.navbar_home') %></a></li>
             <li><a href="<%= projects_path %>" target="_self"><%= t('.navbar_projects') %></a></li>
-            <li><a href="#"><%= t('.navbar_documents') %></a></li>
-            <li><a href="#"><%= t('.navbar_tools') %></a></li>
+            <!-- <li><a href="#"><%= t('.navbar_documents') %></a></li>
+            <li><a href="#"><%= t('.navbar_tools') %></a></li> -->
           </ul>
           <ul class="nav navbar-right top-nav">
             <li class="dropdown">
