check when add an actor

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -113,7 +113,7 @@
                         <tbody>
                           <tr title="Uninitiated Step">
                             <td class="text-center td-w-10p">
-                              <i class="fa fa-unlock"></i>
+                              <i class="<%= icon_class objective.actors %>"></i>
                             </td>
                             <td><%= link_to "Understand the institutional and decision-making cycles/Policy process", stage3_project_objective_path(@project, objective), target: "_self" %></td>
                           </tr>
