Stage 01 improved style

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -23,7 +23,7 @@
     <div role="tabpanel" class="tab-pane active" id="stages">
       <div class="">
         <div class="">
-          <div class="project-hero">
+          <div class="project-hero02">
             <h2><%= @project.title %></h2>
             <p><%= @project.description %></p>
           </div>
@@ -184,7 +184,7 @@
 
     </div>
     <div role="tabpanel" class="tab-pane" id="dashboard">
-      <div class="project-hero">
+      <div class="project-hero02">
         <h2><%= @project.title %></h2>
         <p><%= @project.description %></p>
       </div>
