--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -32,6 +32,9 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart {
   color: #0091EA;
   cursor: pointer;
 }
+
+/*BUTTONS */
+
 .btn {
   border-radius: 15px;
   font-weight: 300;
@@ -82,6 +85,17 @@ table .fa-pencil-square-o, table .fa-trash, table .fa-line-chart {
 .bg_grey .label-info.active {
   background-color: #ff4f4a;
 }
+
+.btn-primary {
+    background-color: #0091EA;
+    border-color: rgba(46, 109, 164, 0);
+}
+
+.btn-primary:hover {
+    background-color: #007DCA;
+    border-color: rgba(46, 109, 164, 0);
+}
+
 label {
     font-weight: 300;
 }
@@ -546,22 +560,32 @@ table.indicator td:first-child {
 .project-hero {
     margin: -1px -0px 30px -0px;
     padding: 20px;
-    background: #00C2E4 url(/assets/project-folder.png) no-repeat bottom right;
+    background: #00C2E4 url(/assets/project-hero01.png) no-repeat bottom right;
     color: #fff;
     min-height: 210px;
     border-radius: 0px 6px 0px 0px;
 }
+
+.project-hero02 {
+    margin: -1px -0px 30px -0px;
+    padding: 20px;
+    background: #00C2E4 url(/assets/project-hero02.png) no-repeat bottom right;
+    color: #fff;
+    min-height: 210px;
+    border-radius: 0px 6px 0px 0px;
+}
+
 @media all and (min-width: 993px) {
-  .project-hero h2, .project-hero p {
+  .project-hero h2, .project-hero p, .project-hero02 h2, .project-hero02 p {
     width: 80%;
   }
 }
 @media all and (max-width: 992px) {
-  .project-hero {
+  .project-hero, .project-hero02 {
     background: #00c2e4;
   }
 }
-.project-hero h2 {
+.project-hero h2, .project-hero02 h2 {
     color: #fff;
 }
 
