--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -1,6 +1,6 @@
 <div class="">
   <div class="">
-    <div class="project-hero">
+    <div class="project-hero02">
       <h2><%= @project.title %></h2>
       <p><%= @project.description %></p>
     </div>
