--- a/app/views/projects/_resources.html.erb
+++ b/app/views/projects/_resources.html.erb
@@ -1,4 +1,4 @@
-<div class="project-hero">
+<div class="project-hero02">
   <h2><%= @project.title %></h2>
   <p><%= @project.description %></p>
 </div>
