--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -18,8 +18,6 @@
         {{ messages.message }}
       </div>
 
-      <h2><%= t('.title') %></h2>
-      <p><%= t('.description') %></p>
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
@@ -28,12 +26,18 @@
         </ul>
         <!-- tab panes -->
         <div class="tab-content">
+            <div class="project-hero">
+              <h2><%= t('.title') %></h2>
+              <p><%= t('.description') %></p>
+            </div>
           <div role="tabpanel" class="tab-pane active" id="data">
-            <div class="bg_grey" id='real-problem'>
-              <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
-              <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
-              <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-info': !problem.id}" ng-click="add_step_one(problem)"><i class="fa" ng-class="{'fa-pencil': problem.id, 'fa-plus-circle': !problem.id}"></i> {{ btn_problem }}</button>
-              <h4><i class="fa fa-circle"></i> <%= t('.subtitle1') %></h4>
+            <div class="panel panel-default">
+              <div class="panel-heading" id='real-problem'>
+                <!-- <button type="button" class="btn btn-warning pull-right">Edit</button> -->
+                <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle1_tooltip') %>"><i class="fa fa-info"></i></button>
+                <button type="button" class="btn pull-right" ng-class="{'btn-warning': problem.id, 'btn-info': !problem.id}" ng-click="add_step_one(problem)"><i class="fa" ng-class="{'fa-pencil': problem.id, 'fa-plus-circle': !problem.id}"></i> {{ btn_problem }}</button>
+                <h4 class="panel-title"><%= t('.subtitle1') %></h4>
+              </div>
             </div>
             <div class="contenedor">
               <p ng-if="problem.title == '.' || !problem.title">
@@ -50,10 +54,12 @@
               <%= render "real_problem_modal" %>
             </div>
             <div id="policy-problems">
-              <div class="bg_grey" ng-if="problem.id">
-                  <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle2_tooltip') %>"><i class="fa fa-info"></i></button>
-                  <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
-                  <h4><i class="fa fa-circle"></i>  <%= t('.subtitle2') %></h4>
+              <div class="panel panel-default">
+                <div class="panel-heading" ng-if="problem.id">
+                    <button type="button" class="btn btn-primary pull-right" data-toggle="tooltip" data-placement="left" data-title="<%= t('.subtitle2_tooltip') %>"><i class="fa fa-info"></i></button>
+                    <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy()"><i class="fa fa-plus-circle"></i> <%= t('.add_button') %></button>
+                    <h4 class="panel-title"><%= t('.subtitle2') %></h4>
+                </div>
               </div>
             </div>
             <p ng-if="!policies">
@@ -61,7 +67,7 @@
             </p>
             <div class="contenedor">
             <!-- policy solution -->
-            <div class="panel panel-default objetives" ng-repeat="policy in policies">
+            <div class="panel panel-info objetives" ng-repeat="policy in policies">
               <div class="panel-heading">
                 <button type="button" class="btn btn-warning pull-right" ng-click="add_edit_policy(policy.id)"><i class="fa fa-pencil"></i></button>
                 <button type="button" class="btn btn-warning pull-right" ng-click="delete_policy(policy)"><i class="fa fa-trash"></i></button>
@@ -95,7 +101,9 @@
             <%= render 'solution_modal' %>
           </div>
           <div role="tabpanel" class="tab-pane" id="explanation">
-            <%= render 'explanation' %>
+            <div class="box">
+              <%= render 'explanation' %>
+            </div>
           </div>
           <div role="tabpanel" class="tab-pane" id="explanation"><%= t('.workshop_tips') %></div>
         </div>
