stage 02 improved style

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -103,8 +103,8 @@ label {
     font-weight: 300;
 }
 .alert-info {
-  background-color: #0091EA;
-  border-color: #0091EA;
+  background-color: #00C2E4;
+  border-color: #00C2E4;
   color: #fff;
   margin: 30px 0;
 }
