--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -565,6 +565,19 @@ table.indicator td:first-child {
     color: #fff;
 }
 
+.project-hero2 {
+    margin: -1px -0px 30px -0px;
+    padding: 20px;
+    background-color: #00C2E4;
+    color: #fff;
+    min-height: 210px;
+    border-radius: 0px 6px 0px 0px;
+}
+
+.project-hero2 h2 {
+    color: #fff;
+}
+
 .separator {
     border-top: 1px solid #F3F3F3;
     padding: 10px 0;
