--- a/app/views/projects/stage1.html.erb
+++ b/app/views/projects/stage1.html.erb
@@ -17,20 +17,19 @@
         <button ng-click="dismiss_modal()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         {{ messages.message }}
       </div>
-
-      <h2><%= t('.title') %></h2>
-      <p><%= t('.description') %></p>
-
-      <button class="btn btn-success" onclick="javascript:introJs().start();">
-        <i class="fa fa-map"></i> <%= t('.guide_me') %>
-      </button>
-
       <div role="tabpanel" class="tabpanel">
         <!-- nav tabs -->
         <ul class="nav nav-tabs" role="tablist" data-step="1" data-intro="<%= t('.step_one') %>">
           <li role="presentation" class="active"><a href="#data" aria-controls="data" role="tab" data-toggle="tab"><%= t('.data_entry') %></a></li>
           <li role="presentation"><a href="#explanation" aria-controls="explanation" role="tab" data-toggle="tab"><%= t('.explanation_examples') %></a></li>
         </ul>
+        <div class="project-hero2">
+          <h2><%= t('.title') %></h2>
+          <p><%= t('.description') %></p>
+          <button class="btn btn-success" onclick="javascript:introJs().start();">
+            <i class="fa fa-map"></i> <%= t('.guide_me') %>
+          </button>
+        </div>
         <!-- tab panes -->
         <div class="tab-content">
           <div role="tabpanel" class="tab-pane active" id="data">
@@ -100,7 +99,7 @@
             <%= render 'solution_modal' %>
           </div>
           <div role="tabpanel" class="tab-pane" id="explanation">
-            <%= render 'explanation' %>
+            <div class="box"><%= render 'explanation' %></div> 
           </div>
           <div role="tabpanel" class="tab-pane" id="explanation"><%= t('.workshop_tips') %></div>
         </div>
